chore: OSSCA Redis 2023 1주차 과제 참고자료 포맷 수정

--- a/content/posts/OSSCA-Redis-2023/index.mdx
+++ b/content/posts/OSSCA-Redis-2023/index.mdx
@@ -102,4 +102,4 @@ git cherry-pick <rebase할 커밋 해시(C)>
 - `C` 커밋에서 변경된 내용을 `A` 브랜치에 적용하여 새로운 커밋을 생성합니다. cherry-pick 완료 후, `A` 브랜치는 새로운 커밋을 가리키고 있다.
 
 ### 참고자료
-- [Pro Git book 한국어 버전](https://git-scm.com/book/ko/v2)
+> [Pro Git book 한국어 버전](https://git-scm.com/book/ko/v2)
