docs: 기본설정 빼고 커스텀

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,4 +1,5 @@
 <Title text="Projects" />
 
-- [3D Art with Cinema4D](https://www.lekoarts.de/art/3d?utm_source=minimal-blog&utm_medium=Theme)
-- [Landscape Photography](https://www.lekoarts.de/art/photography?utm_source=minimal-blog&utm_medium=Theme)
+- [도서관 웹서비스 프로젝트](https://github.com/jiphyeonjeon-42)
+- [도서관 동아리 커뮤니티 웹서비스 프로젝트](https://github.com/Together42)
+- [2023 오픈소스 컨트리뷰션 아카데미 체험형 프로젝트 - Redis](https://github.com/charsyam/ossca-redis-2023#redis)
