--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: About
+title: 우지원
 slug: "/about"
 ---
 
-Hi!
+Email: jwoo@student.42seoul.kr
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+GitHub: https://github.com/Jiwon-Woo
