--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,6 @@
 <Text
-  children={`Hi.`}
+  children={`안녕하세요.`}
   sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
 />
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+신입 백엔드 개발자 우지원입니다.
