docs: OSSCA Redis 2023 3주차 과제 수정

--- a/content/posts/OSSCA-Redis-2023/3-week.mdx
+++ b/content/posts/OSSCA-Redis-2023/3-week.mdx
@@ -1,7 +1,7 @@
 ---
 title: OSSCA Redis 2023 3주차 과제
 date: 2023-10-18
-description: Redis에 간단한 명령을 추가합니다.
+description: Redis에 echo와 동일한 기능을 하는 echo2 명령어를 추가합니다.
 tags:
   - OSSCA
   - Redis
