docs: TIL 회고록으로 변경

--- a/content/posts/TIL/2023-10-30.mdx
+++ b/content/posts/TIL/2023-10-30.mdx
@@ -1,9 +1,9 @@
----
-title: TIL-20231030
+{/* ---
+title: 친바 1주차
 date: 2023-10-30
-description: TIL-1
+description: 친바 1주차
 tags:
-  - TIL
+  - 회고
 ---
 
 ### 오늘 한 것
@@ -11,4 +11,4 @@ tags:
 - restful한 API 설계와 DB 정규화에 대한 고민
 
 ### 고민이었던 것
-- DB 정규화와 반정규화를 적절히 하는 방법은 뭘까?
+- DB 정규화와 반정규화를 적절히 하는 방법은 뭘까? */}
