--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -3,4 +3,5 @@
   sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
 />
 
-신입 백엔드 개발자 우지원입니다.
+신입 개발자 우지원입니다.<br/>
+호기심으로 시작한 개발에서 몰입의 즐거움을 경험하고 개발자의 길을 걷고 있습니다.<br/>
