--- a/content/posts/jiphyeonjeon/index.mdx
+++ b/content/posts/jiphyeonjeon/index.mdx
@@ -1,10 +1,12 @@
 ---
-title: 도서 관리 웹서비스 검색 고도화
+title: 웹 서비스의 도서 검색 경험 개선기
 date: 2023-10-06
 tags:
   - 검색 고도화
-  - MySQL
+  - MySQL full-text search
 ---
+
+![success](./1.png)
 
 ## 0️⃣ **개요**
 
