docs: 경진대회 리팩토링

--- a/content/posts/jiphyeonjeon/index.mdx
+++ b/content/posts/jiphyeonjeon/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 웹 서비스의 도서 검색 기능 개선기
+title: 도서관 웹 서비스의 검색 기능 개선기
 date: 2023-10-06
 tags:
   - 검색 고도화
@@ -43,93 +43,99 @@ tags:
 ## 기존 도서 검색 기능 분석하기
 
 기존 도서 검색은 단순하게 사용자가 입력한 검색어를 완전히 포함하고 있는 도서들만 보여주었다.<br/>
-SQL LIKE `%{검색어}%` 패턴 매칭을 통해 검색을 수행했기 때문이었다.
+SQL LIKE `%{검색어}%` 패턴 매칭을 통한 검색을 했기 때문이었다.
 
-> 검색어가 유사한 경우에도 검색 결과가 매우 다름<br/>
+> 검색어가 유사한 경우에도 검색 결과가 매우 다르다<br/>
 **ex) '자바스크립트' vs '자바 스크립트'**
 
 <img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/5791e5f0-6931-49e3-a768-b12cb5ffb7b6" width="49%" height="49%" />
 <img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/1373135f-fd7a-49bb-b8f6-8dfea5b511e1" width="49%" height="49%" />
 
 
-보유하고 있는 도서가 1000종 정도 밖에 안되는데 검색까지 유연하지 않다면, 사용자가 원하는 정보를 얻기 힘들고, 웹 서비스나 도서관 방문률이 떨어질 수 있겠단 생각이 들었다.
+보유하고 있는 도서가 1000종 정도 밖에 안되는데 검색까지 유연하지 않다면, 사용자가 원하는 정보를 얻기 힘들고, 웹 서비스나 도서관 방문률이 떨어질 수도 있다...<br/>
+
+**검색어를 일부만 포함**한 도서도 결과에 나오게 하고, 도서명/저자명/출판사명 간에 **복합 검색**도 가능하게 해서 사용자가 최대한 많은 검색 결과를 봤으면 좋겠다고 의견을 모았다.
 
 추가로 엔터를 쳐서 도서 검색을 하기 전까지 검색 결과를 예측할 수 없다는 것도 문제로 꼽았다.<br/>
-검색 결과가 0개인 경우에도 검색하기 전까지 모른다는 점이 불편할 수 있겠다 싶었다.<br/>
-교보문고나 알라딘과 같은 도서 쇼핑몰처럼 검색어 타이핑 도중에도 검색 결과 미리보기를 제공하면 좋을 것 같았다.
+검색 결과가 0개인 경우에도 검색하기 전까지 모르는 것이다.<br/>
+
+교보문고나 알라딘과 같은 도서 쇼핑몰처럼 검색어 타이핑 도중에도 **도서 미리보기**를 제공하면 좋을 것 같았다.
+
+![aladin](./aladin.png)
+
+타이핑 도중 보유 도서 미리보기를 제공하게 된다면, 좀 더 연속성 있는 미리보기를 제공하고 싶었고, 이를 위해 **자음 모음 분리 검색**의 도입도 검토하게 되었다.<br/>
+기존에는 자음과 모음이 결합된 글자로만 검색이 가능했지만, '파이ㅆ'이나 '파있'으로도 검색이 가능하게 하자는 것이었다.
+
+![aladin2](./aladin2.png)
 
 <br />
 
+### 기술 스택 선택하기
 
-## **1️⃣ 검색 기능 개선**
+검색 기능을 고도화했다는 얘기를 했을 때 가장 많이 들은 말이 있다.
 
-### **기존 검색 기능의 한계**
+*'엘라스틱 서치 사용하셨나요?'*
 
-기존 검색 기능에는 아래와 같은 한계점이 있었습니다.
+검색 엔진이라고 하면 가장 먼저 떠오르는 기술인 만큼, 우리도 고려하지 않은 것은 아니다.<br/>
 
-1. 검색어에 띄어쓰기를 포함한 결과와 불포함한 결과가 매우 상이
+하지만 1000종 정도밖에 되지 않는 도서 검색을 위해 전문 검색 엔진을 도입하는 것이 맞을까란 생각이 들었다.<br/>
+심지어 동아리 내에서 운영 중인 서비스 특성상, 개발팀원이 자주 바뀌고, 웹 서비스를 한 번도 구현해보지 않은 팀원과 함께 할 수도 있다.<br/>
+이런 상황에서 엘라스틱 서치를 추가로 사용하면 서비스의 복잡도를 높여 유지보수를 어렵게 할 것이다.<br/>
+비용에 비해 효용이 아쉽다는 판단이 들어 다른 방법을 찾아보기로 했다.
 
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/5791e5f0-6931-49e3-a768-b12cb5ffb7b6" width="49%" height="49%" />
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/1373135f-fd7a-49bb-b8f6-8dfea5b511e1" width="49%" height="49%" />
+![meet](./meet.png)
 
-2. 도서명, 저자, 출판사 복합 검색 불가능
+그러다 찾게 된 것이 **MySQL 전문 검색** 이었다.<br />
+full text 인덱스를 추가하고, 검색 쿼리만 수정하면 바로 적용할 수 있었다.<br />
+심지어 전문 검색은 **검색어 부분 일치 검색**이 가능하고, 복합 인덱스 설정시 **복합 칼럼 검색**도 가능했다.<br/>
 
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/184728d3-0ba3-4d06-9773-179dec2f12ea" width="49%" height="49%" />
+구현하고자 했던 기능을 구현하는데 부족함이 없었고, 서비스의 규모에 맞는 기술이라는 생각이 들었다.<br/>
 
-3. 자모 분리 검색 불가능 (예. ‘파있’과 ‘파이썬’ 검색 결과가 매우 상이)
+<br/>
 
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/74583716-3462-43ef-9819-b70d8554b468" width="49%" height="49%" />
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/ddf0bf3e-0e27-4b28-a983-0cfeca4dd96c" width="49%" height="49%" />
+## 구현 방법
+full text 인덱싱 알고리즘은 텍스트를 n글자로 쪼깨 인덱싱하는 **n-gram** 분석 알고리즘을 사용했다.<br/>
+만약 'abcd'를 2글자씩 인덱싱 한다면 'ab', 'bc', 'cd' 가 각각 인덱싱 된다.<br/>
 
+(한글 형태소 분석 알고리즘도 있다고 들었지만, 비용이 많이 들기 때문에 범용적으로 쓰이는 n-gram 분석을 추천한다는 참고 도서의 말을 따르기로 했다.)
 
-이러한 한계를 개선하기 위해 해당 프로젝트에서 유연한 검색을 가능하게 하고, 몇 가지 검색 편의 기능을 도입하여 원하는 자료를 찾는데 소요되는 단계를 단축했습니다.
+그리고 자음 모음 분리 검색을 위해 검색 필드인 도서명, 저자명, 출판사명의 자음과 모음을 분해하여 새로운 컬럼에 저장했다.<br/>
 
-### **기술적 고민 및 구현 방법**
-
-먼저 검색 기능 강화를 위해 Elasticsearch, MySQL 전문 검색, LIKE 연산자를 비교하며 어떤 것을 사용해야 할지 고민했습니다. Elasticsearch는 대표적인 검색 엔진인 만큼 검색 기능이 강력하고, 한글 형태소 분석까지 지원하지만, 기존에 운영하고 있던 MySQL DB와 같이 운영할 때 생기는 단점이 있었습니다. 도서 정보 테이블과 도서 정보 검색을 위한 정보를 따로 사용하게 되면 단일 DB만 사용할 때보다 데이터 일관성이 떨어질 위험이 커지고, 한 번의 요청으로 처리될 수 있었던 기능도 복수의 요청을 보내야 합니다. 프로젝트나 데이터의 규모도 크지 않기 때문에 기존에 사용하던 MySQL을 최대한 활용해서 기능을 구현하기로 했습니다.
-
-LIKE로는 한 항목에서만 단순 부분 일치를 판단하여 결과를 반환합니다. 반면 MySQL 전문 검색은 공백을 기준으로 토큰화하여 여러 항목에서 복합 검색이 가능합니다. 예를 들어 ‘김영한 자바’라고 검색하면 저자에 ‘김영한’, 책 제목에 ‘자바’가 포함된 검색 결과를 얻을 수 있습니다. 하지만 MySQL 전문 검색 결과가 LIKE를 검색 결과를 전부 포함할 것이라는 예상과 달리 두 결과에는 각각 여집합 부분이 존재했습니다. 두 검색 결과가 상호보완적이고, 전문 검색만 사용한 응답 속도와 전문 검색과 LIKE를 같이 사용한 응답 속도에 큰 차이가 없었기 때문에 MySQL 전문 검색과 LIKE 검색 결과물을 함께 제공하게 되었습니다.
-
-자음과 모음을 분리한 검색, 그리고 좀 더 나아가 초성 검색까지 구현하기로 했습니다. hangul-js 라이브러리를 채택하여 도서 정보의 일부(도서명, 저자, 출판사)를 자음과 모음으로 분해하는 작업과 초성만 추출하는 작업을 수행하고, 테이블에 저장해 두었습니다. 그리고 자음과 모음이 분리된 칼럼들과 초성 칼럼들을 각각 n-gram 파서를 사용하는 전문 인덱스로 구성했습니다. 인덱스를 도서명, 저자, 출판사로 구성했기 때문에 복합 검색이 가능해졌고, 사용자가 입력한 검색어 또한 hangul-js를 통해 분리함으로써 자모 분리 검색과 초성 검색을 구현할 수 있었습니다. 그리고 각 칼럼을 LIKE로 검색할 경우에는 검색어의 공백을 와일드카드 ‘%’로 치환하여 띄어쓰기 여부에 따른 검색 결과의 차이를 줄였습니다.
-
-
-### **검색 기능 개선 이후**
-
-1. ‘자바스크립트’와 ‘자바 스크립트’의 결과의 교집합이 생기며, ‘자바 스크립트’의 경우 전문 검색에 의해 ‘자바’나 ‘스크립트’ 둘 중 하나만 포함해도 검색 결과에 반환됨
-
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/9a0a99e3-c7e2-4305-99ac-088857c90941" width="49%" height="49%" />
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/4d45e8b3-1a9d-4965-b594-30bb78ca11e9" width="49%" height="49%" />
-
-2. 도서명, 저자 복합 검색 가능
-
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/cf886c9a-5010-4a27-a52a-d256c2986961" width="49%" height="49%" />
-
-3. ‘파있’과 ‘ㅍㅇㅆ’ 검색 시 ‘파이썬’ 검색 결과와 유사
-
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/b5ca4da3-2040-48f6-b331-5ac55a30fb1f" width="49%" height="49%" />
-	<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/d4c60714-2dbb-4f24-a57c-6e384282c7fa" width="49%" height="49%" />
-
+그 다음 도서명, 저자명, 출판사명 컬럼에 **full text 인덱스**를 걸었는데, 해당 필드 간의 복합 검색을 원했기 때문에 특별히 **복합 인덱스**로 설정했다.<br/>
+예를 들어, '김영한 자바'라고 검색하면 저자명에 '김영한', 도서명에 '자바'를 포함한 도서를 검색할 수 있다.
 
 <br />
 
-## **2️⃣ 인기 검색어 구현**
+## **검색 기능 개선 결과**
 
-### **검색 편의 기능의 부재**
+> **'자바스크립트' vs '자바 스크립트'**<br/>
+특히 ‘자바 스크립트’의 경우, 전문 검색에 의해 ‘자바’나 ‘스크립트’ 둘 중 하나만 포함해도 검색 결과에 반환됨
 
-기존 서비스에서는 기본 검색 기능을 제외하고, 타 사이트에서 자주 볼 수 있는 자동완성, 검색 결과 미리보기, 최근 검색어, 인기 검색어 등의 검색 편의 기능이 없었습니다. 그래서 사용자의 검색 경험을 개선하고, 다른 사용자의 검색어를 공개하여 검색 유도를 하기 위한 목적으로 인기 검색어를 도입하게 되었습니다.
+<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/9a0a99e3-c7e2-4305-99ac-088857c90941" width="49%" height="49%" />
+<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/4d45e8b3-1a9d-4965-b594-30bb78ca11e9" width="49%" height="49%" />
 
-### **기술적 고민 및 구현 방법**
+> **도서명 + 저자명 + 출판사명 복합 검색 가능**
 
-인기 검색어 기능을 오픈하자마자 인기 검색어 순위를 제공하고 싶었기 때문에 이전에 쌓인 로그를 활용했습니다. 7~8월 중 보름간 들어온 도서 검색 Request를 파싱하여 검색어와 검색 로그 테이블에 저장했습니다.
+<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/cf886c9a-5010-4a27-a52a-d256c2986961" width="49%" height="49%" />
 
-좀 더 다양한 볼거리를 위해 인기 검색어 순위뿐만 아니라 해당 인기 검색어의 순위 변동을 구현하기로 했습니다. 순위 변동 구현을 위해서는 어느 지점을 이전 인기 검색어로 생각할지, 이전 인기 검색어를 어떻게 저장할지에 대해 고민했습니다. 이미 기존에 node-schedule 라이브러리를 이용하여 스케줄러를 구성하고 있었기 때문에, 해당 스케줄러를 활용하여 0시 42분마다 하루 전 인기 검색어를 집계하고, 이를 순위 변동의 기준으로 사용했습니다. 순위 변동의 기준은 가장 최근 것 하나만 필요하고 운영 서버를 한 대만 이용하고 있기 때문에 애플리케이션 단에 캐싱해 두었습니다.
+> **자모 분리 검색 가능**
 
-검색량이 풍부하지 않기 때문에 인기 검색어를 어떤 방식으로 10개를 채울지 기준을 세웠습니다. 먼저 인기 검색어를 요청한 시점부터 24시간 이내에 N회 이상 발생한 검색어를 추출합니다. 만약 추출된 검색어의 개수가 10개 미만이면 요청 시점으로부터 한 달 이내 N회 이상 발생한 검색어를 한 번 더 추출하여 채워 넣습니다. 그래도 부족하다면 전 기간에 걸쳐 N회 이상 발생한 검색어를 추가로 추출하도록 했습니다.
+<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/cd1d5cff-b7f0-41d7-a92e-7fbc057cef7b" width="49%" height="49%" />
+<img src="https://github.com/jiphyeonjeon-42/discussion/assets/74581396/23351cc3-6442-48bd-9ad0-ae67ad34e6b4" width="49%" height="49%" />
 
 
-### **인기 검색어 화면**
+<br />
+<br />
 
-![인기1](https://github.com/jiphyeonjeon-42/discussion/assets/74581396/4b1ac1e0-2598-43c8-b570-2adf36ad4063)
-![인기2](https://github.com/jiphyeonjeon-42/discussion/assets/74581396/fcff1ea2-c564-485e-8235-a84fbf117235)
+## 회고
 
-이번 경진대회는 나에게 도전이었다.<br />
+이번 경진대회는 여러 의미로 나에게 도전이었다.<br />
+소프트웨어 개발 대회를 나간 것도 처음이었고, 어떻게 구현하면 되겠다라는 명확한 그림 없이 무작정 도전하게 된 것도 지금 생각해보면 신기하다.<br />
+어떻게든 문제를 해결할 방법은 있구나, 다시 한번 느꼈다.
+
+그리고 경진대회 발표 리허설 때만해도 예정에 없었는데, 발표 당일 검색 기능 설명과 함께 서비스 시연을 맡게 되었다.<br />
+오랜만의 발표라 많이 떨려서 떨림을 진정시키기 위해 연습에 몰두하기도 했다.<br />
+하지만 나는 내 생각보다 발표를 잘해주었고, 스스로를 좀 더 믿는 계기가 되어 기뻤다.<br />
+
+개발을 처음 시작했을 때 즐거웠던 감정도 들고 좋은 경험이었다.<br />
+앞으로 이 블로그에서 해당 프로젝트에서 사용한 기술들을 플어가보고 싶다.
