docs: 링크 오류 수정

--- a/content/posts/OSSCA-Redis-2023/4-week.mdx
+++ b/content/posts/OSSCA-Redis-2023/4-week.mdx
@@ -8,7 +8,7 @@ tags:
 ---
 
 ## 과제 내용
-- [3주차 과제](http://localhost:8000/ossca-redis-2023-3-%EC%A3%BC%EC%B0%A8-%EA%B3%BC%EC%A0%9C/)를 심화 학습합니다.
+- [3주차 과제](https://jiwon-woo.github.io/ossca-redis-2023-3-%EC%A3%BC%EC%B0%A8-%EA%B3%BC%EC%A0%9C)를 심화 학습합니다.
 - 받은 내용을 그대로 돌려주되, `echo{영어이름}_` 접두사를 붙여 응답하는 `echo{영어이름}` 명령어를 추가해봅니다.
 - 즉, `echo{영어이름} abc` 라고 보내면, `echo{영어이름}_abc` 라고 응답이 오도록 해야합니다.
 
