docs: NestJS - swagger 참고 자료 수정

--- a/content/posts/NestJS/3.mdx
+++ b/content/posts/NestJS/3.mdx
@@ -181,13 +181,10 @@ SwaggerModule.setup('swagger', app, swaggerDocument, swaggerCustomOptions);
 
 ![swagger](./swagger.png)
 
-NestJS swagger는 기본적으로 Controller 기반으로 api 주소를 맵핑해준다. 하지만 그 외의 request나 response 형태는 데코레이터를 통해 추가로 설정해주어야 한다.
-<br/>
+NestJS swagger는 기본적으로 Controller 기반으로 api 주소를 맵핑해준다.
+<br/>하지만 그 외의 request나 response 형태는 데코레이터를 통해 추가로 설정해주어야 한다.
+<br/>NestJS swagger의 다양한 사용법은 [NestJS 공식 문서](https://docs.nestjs.com/openapi/introduction)에서 볼 수 있다.
 
 ### 참고
-> [[Nest.js] Nest.js API 만들기 (12) - API 문서화(Swagger)](https://any-ting.tistory.com/122)
-<br/> [Nestjs 에서 swagger 사용하기](https://popawaw.tistory.com/183)
-<br/> [NestJS에서 Swagger를 사용하는 방법](https://jhyeok.com/nestjs-swagger/)
-<br/> [NESTJS로 Swagger 문서화 하기](https://velog.io/@glowforever/NESTJS%EB%A1%9C-Swagger-%EB%AC%B8%EC%84%9C%ED%99%94-%ED%95%98%EA%B8%B0)
-<br/> [Nestjs 프로젝트에 Swagger 도입하기](https://velog.io/@mhj6380/Nestjs-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EC%97%90-Swagger-%EB%8F%84%EC%9E%85%ED%95%98%EA%B8%B0)
+> [NestJS 공식 문서 - OpenAPI](https://docs.nestjs.com/openapi/introduction)
 <br/> [[nestjs]swagger를 이용하여 api 문서화](https://blog.naver.com/pjt3591oo/222461534913)
