docs: NestJS 데코레이터

--- a/content/posts/NestJS/4.mdx
+++ b/content/posts/NestJS/4.mdx
@@ -1,5 +1,5 @@
-{/* ---
-title: NestJS 데코레이터
+---
+title: NestJS - 데코레이터
 date: 2024-02-05
 tags:
   - NestJS
@@ -208,4 +208,4 @@ Hello World!
 
 > [NestJS로 배우는 백엔드 프로그래밍 - 2.6 데코레이터](https://wikidocs.net/158481)
 <br/>[TypeScript Docs - 데코레이터](https://typescript-kr.github.io/pages/decorators.html)
-<br/>[타입스크립트 데코레이터 완벽 가이드](https://itchallenger.tistory.com/765) */}
+<br/>[타입스크립트 데코레이터 완벽 가이드](https://itchallenger.tistory.com/765)
